--- a/setup.html
+++ b/setup.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <p>Fathersday.</p>
+    <p>Fathersd.</p>
     <h1>hello</h1>
   </body>
 </html>
